--- a/src/view/main/checkVq/checkNg/checkNg.scss
+++ b/src/view/main/checkVq/checkNg/checkNg.scss
@@ -6,103 +6,95 @@
     @include wh(100%, 100%);
     position: relative;
     overflow: hidden;
-    padding-top: 65px;
-    &::after {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 50%;
-        z-index: 9;
-        @include wh(1px, 100%);
-        background-color: #dddddd;
-    }
-    .revisionSearch-state-info {
+    padding-top: 105px;
+    padding-bottom: 60px;
+    background-color: #f3f4f5;
+    .checkNg-header {
         position: absolute;
         top: 0;
         left: 0;
-        background-color: #FFFFFF;
         width: 100%;
-        padding: 15px 40px;
-        text-align: left;
-        z-index: 10;
-        border-bottom: 1px solid #dddddd;
-        @include clearfix;
-        .state-isRepeat {
+        .checkNg-info {
             display: inline-block;
-            .logo-car {
+            padding: 10px 0;
+            font-size: 22px;
+            color: #333333;
+            font-weight: normal;
+            font-stretch: normal;
+            vertical-align: middle;
+            .scanned-info {
                 display: inline-block;
-                vertical-align: middle;
-                @include wh(30px, 30px);
-                margin-right: 5px;
+                width: 150px;
             }
-            .logo-car-info {
-                display: inline-block;
-                vertical-align: middle;
-                @include wh(140px, 30px);
-                margin-left: 5px;
+            .info-label {
+                color: #16b793;
+            }
+            .error-info {
+                color: #f04833;
             }
         }
     }
-    .checkNg-content {
-        @include clearfix;
+    .checkNg-body {
         @include wh(100%, 100%);
-        overflow: hidden;
-        .checkNg-content__left,
-        .checkNg-content__right {
-            width: 50%;
-            height: 100%;
-            overflow: auto;
-            padding: 15px;
-        }
-        .checkNg-content__left {
-            position: relative;
+        @include clearfix;
+        padding: 40px 0;
+        border-top: solid 1px #d7d7d7;
+        background-color: $white;
+        .checkNg-body__left,
+        .checkNg-body__right {
             float: left;
-            text-align: center;
-            .checkNg-content__title {
-                text-align: left;
-                padding: 15px;
-                font-size: 18px;
-                font-weight: bold;
-                background-color: #EEEEEE;
-                margin: 0 -15px;
-            }
         }
-        .checkNg-content__right {
-            float: right;
-            text-align: center;
-            .car-box {
-                margin-top: 80px;
-                display: inline-block;
+        .checkNg-body__left {
+            width: 60%;
+            height: 100%;
+            position: relative;
+            padding: 0 80px;
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 100%;
+                width: 1px;
+                height: 100%;
+                background-color: #cccccc;
+            }
+            .checkNg-body__title {
+                font-size: 22px;
+                font-weight: normal;
+                font-stretch: normal;
+                color: #333333;
+                padding-bottom: 24px;
+                span {
+                    color: #f6630a;
+                }
+            }
+            .checkNg-body__main {
                 text-align: center;
-                padding-top: 30px;
-                padding-bottom: 30px;
-                .checkVq-li-panel-item {
-                    margin: 0 50px;
+                &.mb70 {
+                    margin-bottom: 70px;
                 }
-                .chart-dashboard-item {
-                    @include wh(250px, 150px);
-                }
-                .car-space-panel {
-                    @include clearfix;
-                    .car-space-item {
-                        float: left;
-                        img {
-                            width: auto;
-                            display: inline-block;
-                        }
-                        .car-door-item {
-                            padding-top: 10px;
-                            &.door-top {
-                                margin-bottom: 120px;
-                            }
-                        }
-                        .info-color {
-                            padding-top: 5px;
-                            font-size: 16px;
-                        }
-                    }
+                &.wh {
+                    width: 80%;
                 }
             }
         }
+        .checkNg-body__right {
+            width: 40%;
+            .car-space-panel {
+                position: relative;
+                margin-top: 90px;
+                text-align: center;
+                img {
+                    width: auto;
+                    display: inline-block;
+                }
+            }
+        }
+    }
+    .checkNg-footer {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
     }
 }
