--- a/src/view/main/main.html
+++ b/src/view/main/main.html
@@ -10,7 +10,7 @@
         </div>
         <div class="header-logo">
             <img class="logo-img" src="../../assets/images/titlelogo.png" alt="titlelogo" />
-            {{STATE.title}}
+            {{STATE.title}}&nbsp;&nbsp;{{STATE.routeTitle}}
         </div>
         <div class="header-loginOut">
             <!-- <span class="loginInfo-username">{{userInfo.userType | userType}}：{{userInfo.name}}</span> -->
