--- a/src/assets/style/search.scss
+++ b/src/assets/style/search.scss
@@ -1,21 +1,18 @@
 // search-bar 组件
-@import './vars';
-@import './mixins';
 
 .search-bar{
     @include wh(100%, auto);
-    background-color: $searchBar_bg;
-    padding: 5px 30px 5px 5px;
+    background-color: $white;
+    padding: 23px 40px;
     @include clearfix;
-    .search-bar-item-label{
-        float: left;
-        padding: 9px 15px;
-        width: 80px;
-        font-weight: 400;
-        line-height: 20px;
-        text-align: right;
-        font-size: 14px;
+    border-bottom: solid 1px #d7d7d7;
+    .btn_active_color {
+        display: inline-block;
+        font-size: 24px;
+        color: #e9fd6e;
+        vertical-align: -1px;
     }
+
     .search-bar-item-input{
         margin-top: 4px;
         float: left;
