--- a/src/view/main/check/check.html
+++ b/src/view/main/check/check.html
@@ -1,63 +1,64 @@
-<!--
-  * 作者：yeshengqiang
-  * 时间：2018-04-28
-  * 描述：产品检测 返修人员
--->
 <div class="check-container">
-    <!-- searchBar -->
-    <div class="search-bar" ng-enter="searchLineProduct()">
-        <div class="search-bar-item-input">
-            <div class="check__checked">
-                <v-radio ng-model="checkType" value="imei">IMEI</v-radio>
-                <v-radio ng-model="checkType" value="vin">车架号</v-radio>
-                <v-radio ng-model="checkType" value="deviceCode">SN</v-radio>
+    <div class="check-header">
+        <!-- searchBar -->
+        <div class="search-bar mb20" ng-enter="searchLineProduct()">
+            <div class="check_box float-left">
+                <div class="check__checked">
+                    <v-radio ng-model="checkType" disabled="checkType !== 'vin'" value="vin">VIN编码</v-radio>
+                    <v-radio ng-model="checkType" disabled="checkType === 'vin'" value="deviceCode">SN</v-radio>
+                    <v-radio ng-model="checkType" disabled="checkType === 'vin'" value="imei">IMEI</v-radio>
+                </div>
+                <div class="form-group">
+                    <label>{{placeholder}}</label>
+                    <input type="text" v-focus="focus" class="form-control" id="checkId" name="title" autocomplete="off" placeholder="请输入{{placeholder}}" />
+                </div>
+                <button class="btn btn-primary mr14" v-busy="loading" loading-text="搜索中" ng-click="searchLineProduct()">搜索</button>
             </div>
+            <button class="btn btn-primary check-btn float-right" ng-click="check('vq')">重新进行<span>VQ检测</span></button>
+            <button class="btn btn-primary check-btn float-right mr14" ng-click="check('production')">重新进行<span>总装检测</span></button>
+            <button class="btn btn-default check-btn float-right mr14" ng-show="checkInto.vin" ng-click="repair(checkInto)">返修完成</button>
+            <button class="btn btn-primary check-btn float-right mr14" ng-click="reset()">重来</button>
         </div>
-        <label class="search-bar-item-label">{{placeholder}}</label>
-        <div class="search-bar-item-input">
-            <input type="text" v-focus="focus" id="checkId" name="title" autocomplete="off" placeholder="请输入{{placeholder}}" />
+        <!-- searchBar -->
+        <div class="search-bar" style="min-height: 96px;">
+            <div class="checkNg-info">
+                <span class="info-label" ng-show="checkInto.prevValue">当前车辆：<span class="describe">{{describe}}</span></span>
+                {{checkInto.prevValue}}
+                <span class="error-info">{{checkInto._ERROR}}</span>
+                <span class="error-info">{{checkInto.vehicleStatus | vehicleStatus}}</span>
+                <img class="scanned-info" ng-show="checkInto.scanned === 2" src="../../../assets/images/info.png" alt="info" />
+            </div>
+            <button class="btn btn-default mark-btn float-right" ng-show="checkType === 'vin' && checkInto.vin" ng-click="untying(checkInto)">解绑</button>
+            <button class="btn btn-default mark-btn float-right" ng-show="checkType !== 'vin' && checkInto.deviceCode" ng-click="mark(checkInto)">标记</button>
         </div>
-        <button class="btn btn-promise" v-busy="loading" loading-text="搜索中" ng-click="searchLineProduct()">搜索</button>
-        <button class="btn btn-promise float-right" ng-click="check('vq')">重新进行VQ检测</button>
-        <button class="btn btn-promise float-right" ng-click="check('production')">重新进行总装检测</button>
-        <button class="btn btn-promise float-right" ng-click="check('change')">设备换件</button>
     </div>
-    <!-- 表格 -->
-    <table class="tabel-panel">
-        <thead>
-            <tr>
-                <th>车架号</th>
-                <th>IMEI</th>
-                <th>检测时间</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-show="checkList.length" ng-repeat="item in checkList">
-                <td class="x-nowrap" ng-bind="item.vin"></td>
-                <td class="x-nowrap" ng-bind="item.imei"></td>
-                <td class="x-nowrap" ng-bind="item.detectionTime"></td>
-            </tr>
-            <tr ng-show="!checkList.length">
-                <td colspan="3">
-                    <div class="no-data"></div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <!-- 返修原因 -->
-    <div class="reason-panel">
-        <h3 class="check-panel-title">
-            <img src="../../../assets/images/fail.png" alt="fail" />
-            返修原因
-        </h3>
-        <div class="check-panel-content">{{checkInto.repairResult}}</div>
-    </div>
-    <!-- 返修建议 -->
-    <div class="proposal-panel">
-        <h3 class="check-panel-title">
-            <img src="../../../assets/images/proposal.png" alt="proposal" />
-            返修建议
-        </h3>
-        <div class="check-panel-content">{{checkInto.detectionSuggest}}</div>
+    <div class="check-main" ng-show="checkType === 'vin'">
+        <table class="tabel-panel">
+            <thead>
+                <tr>
+                    <th>VIN编码</th>
+                    <th>车系</th>
+                    <th>SN</th>
+                    <th>IMEI</th>
+                    <th>ICCID</th>
+                    <th>车辆状态</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-show="checkList.length" ng-repeat="item in checkList">
+                    <td class="x-nowrap" ng-bind="item.vin"></td>
+                    <td class="x-nowrap" ng-bind="item.adapted"></td>
+                    <td class="x-nowrap" ng-bind="item.deviceCode"></td>
+                    <td class="x-nowrap" ng-bind="item.imei"></td>
+                    <td class="x-nowrap" ng-bind="item.iccid"></td>
+                    <td class="x-nowrap" ng-bind="item.vehicleStatus | vehicleStatus"></td>
+                </tr>
+                <tr ng-show="!checkList.length">
+                    <td colspan="7">
+                        <div class="no-data"></div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
