--- a/src/view/main/main.scss
+++ b/src/view/main/main.scss
@@ -12,25 +12,21 @@
         @include clearfix;
         background-color: $header_bg;
         text-align: center;
-        padding: 5px 25px;
+        padding: 5px 40px;
         .time-panel {
             text-align: left;
-            font-size: 20px;
+            font-size: 18px;
             height: 50px;
             line-height: 50px;
             float: left;
-            color: $global_color;
+            color: $header_font_color;
         }
         .header-logo {
-            position: absolute;
-            @include wh(600px, 50px);
+            display: inline-block;
+            height: 50px;
             line-height: 50px;
-            top: 50%;
-            left: 50%;
-            margin-left: -250px;
-            margin-top: -25px;
             font-size: 24px;
-            color: $global_color;
+            color: $header_font_color;
             .logo-img {
                 vertical-align: middle;
                 display: inline-block;
@@ -39,7 +35,7 @@
             }
         }
         .header-loginOut {
-            color: $global_color;
+            color: $header_font_color;
             float: right;
             height: 50px;
             line-height: 50px;
@@ -55,7 +51,8 @@
                     display: inline-block;
                     vertical-align: middle;
                     width: 18px;
-                    margin-left: 30px;
+                    margin-top: -4px;
+                    margin-left: 14px;
                 }
             }
         }
